# rheo-tests

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  compat.yml
cases/: dead_link_error.typ  multiple_links_inline.typ
cases/bundle_ref_cross_directory/: intro.typ  rheo.toml
cases/code_blocks_with_links/: chapter1.typ  chapter2.typ  code_examples.typ  conclusion.typ  intro.typ  other.typ  rheo.toml
cases/cross_directory_label_collision/: rheo.toml
cases/cross_directory_links/: intro.typ  rheo.toml
cases/epub_explicit_spine/: chapter.typ  intro.typ  rheo.toml
cases/epub_inferred_spine/: a.typ  b.typ  c.typ
cases/error_formatting/: array_index_error.typ  function_arg_error.typ  import_error.typ  invalid_field.typ  invalid_method.typ  multiple_errors.typ  rheo.toml  syntax_error.typ  type_error.typ  undefined_var.typ  unknown_function.typ
cases/html_spine/: about.typ  index.typ  rheo.toml
cases/link_path_edge_cases/: chapter-01.typ  file-name.typ  file_name.typ  main.typ  rheo.toml  version-1.0.typ
cases/link_transformation/: doc1.typ  doc2.typ  rheo.toml
cases/links_with_fragments/: page1.typ  page2.typ  rheo.toml
cases/math/: main.typ  rheo.toml
cases/merged_pdf_cross_links/: chapter.typ  intro.typ  rheo.toml
cases/merged_subdir_imports/: rheo.toml
cases/migrate_link_syntax/: a.typ  b.typ  rheo.toml
cases/multiple_links_inline/: a.typ  b.typ  c.typ  chapter1.typ  conclusion.typ  file1.typ  file2.typ  intro.typ  multiple_links_inline.typ  rheo.toml  x.typ  y.typ
cases/pdf_individual/: chapter1.typ  chapter2.typ  rheo.toml
cases/pdf_merge/: chapter1.typ  chapter2.typ  conclusion.typ  intro.typ  rheo.toml
cases/pdf_merge_false/: a.typ  b.typ  c.typ  (+1 more)
examples/: cover-letter.typ
src/: lib.rs
store/: .gitignore
tests/: build_api.rs  compat.rs  harness.rs  manifest_packages.rs
(+182 files in other folders)
