[package]
name = "rheo-tests"
version = "0.3.1"
edition = "2024"
publish = false

[lib]
test = true

[[test]]
name = "compat"
path = "tests/compat.rs"

[dependencies]
# Internal crates (path deps to main rheo repo)
rheo-core = { path = "/home/alice/code/fcl/rheo/crates/core" }
rheo-html = { path = "/home/alice/code/fcl/rheo/crates/html" }
rheo-pdf = { path = "/home/alice/code/fcl/rheo/crates/pdf" }
rheo-epub = { path = "/home/alice/code/fcl/rheo/crates/epub" }

# Test-specific dependencies (literal versions)
ntest = "0.9"
similar = "3.1"
serde_json = "1.0"
paste = "1"

# PDF metadata extraction
lopdf = "0.41"
sha2 = "0.11"

# Workspace deps (literal versions, verified against main repo)
tempfile = "3.8"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "8.6", default-features = false }
html5ever = "0.39"
markup5ever_rcdom = "0.39"
serde-xml-rs = "0.8.2"

[workspace]
